<resources>
    <string name="app_name">Beeriology</string>
    <string name="place_holder_text">Place Holder Text</string>
    <string name="action_settings">Settings</string>
    <string name="success_message">Data Fetched Successfully</string>
    <string name="failure_message">Failure In Fetching Data. Please Check Internet Connection</string>
    <string name="ok_string">OK</string>
    <string name="not_found">Not Found</string>
    <string name="placeholder_name">Name</string>
    <string name="placeholder_title">Name</string>
    <string name="key_title">title</string>
    <string name="key_name">name</string>
    <string name="key_resID">resID</string>
    <string name="failed_to_load_image_message">Image Failed To Load</string>
    <string name="string_description">Description</string>
    <string name="string_beerVolume">Volume</string>
    <string name="string_beerPH">PH Level</string>
    <string name="string_contributor">Contributor</string>
    <string name="string_end_ph_level_search_mode">End PH Search Mode</string>
    <string name="string_no_data_found_on_server">No Data On Server</string>
    <string name="string_dialog_details_button">Details</string>
    <string name="string_dialog_browser_button">Browser</string>
    <string name="string_dialog_cancel_button">Cancel</string>
    <string name="splash_screen_animation_file_name">beer_animation.json</string>
    <string name="string_choose">Please Choose...</string>
    <string name="string_menu_ph_level">PH Level</string>
    <string name="string_toolbar_beer_name">BeerName: </string>
</resources>