...
        android:visibility="gone"
        app:mlpb_progress_color="@color/colorPrimary"
        android:layout_gravity="center"/>

    <!-- RECYCLER VIEW FOR DISPLAYING BEER CARD GRID-->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_beers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</android.support.design.widget.CoordinatorLayout>
